Add product page shared by catalog and promo
